--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									
+
 									<li><a href="no-sidebar.html">About</a></li>
 									<li><a href="left-sidebar.html">Projects</a></li>
 									<li class="break">
@@ -116,21 +116,21 @@
 									</ul>
 								</div>
 							</section>
-							
+
 						</div>
 					</div>
 				</div>
 
 			<!-- Promo -->
-				<div id="promo-wrapper">
+				<!-- <div id="promo-wrapper">
 					<section id="promo">
 						<h2>Neque semper magna et lorem ipsum adipiscing</h2>
 						<a href="#" class="button">Breach the thresholds</a>
 					</section>
-				</div>
+				</div> -->
 
 			<!-- Features 2 -->
-				<div class="wrapper">
+				<!-- <div class="wrapper">
 					<section class="container">
 						<header class="major">
 							<h2>Sed magna consequat lorem curabitur tempus</h2>
@@ -163,10 +163,10 @@
 							<li><a href="#" class="button">Elevate my awareness</a></li>
 						</ul>
 					</section>
-				</div>
+				</div> -->
 
 			<!-- Footer -->
-				<div id="footer-wrapper">
+				<!-- <div id="footer-wrapper">
 					<div id="footer" class="container">
 						<header class="major">
 							<h2>Euismod aliquam vehicula lorem</h2>
@@ -216,7 +216,7 @@
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 
 		</div>
 
