styling about and projects

--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="left-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header-wrapper">
+				<div id="header-wrapper-about">
 					<div id="header" class="container">
 
 						<!-- Logo -->
@@ -46,80 +46,54 @@
 			<!-- Main -->
 				<div class="wrapper">
 					<div class="container" id="main">
-
-						<!-- Content -->
-							<article id="content">
-								<header>
-									<h2>No Sidebar</h2>
-									<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit
-									dolor neque semper.</p>
-								</header>
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien
-								mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
-								condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
-								ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
-								eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
-								turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
-								Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
-								<p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum
-								gravida nibh eget, volutpat odio. Proin rhoncus, sapien
-								mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
-								condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
-								ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
-								eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
-								turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
-								Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
-								<p>Vestibulum pellentesque posuere lorem non aliquam. Mauris eleifend eleifend
-								felis aliquet ornare. Vestibulum porta velit at elementum elementum.</p>
-							</article>
-
 						<div class="row features">
+							<h2 id='whet'>Some things to whet your appetite</h2>
+							<div class="row features">
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://alvitovitch.github.io/Down-and-Dandy/" class="image featured"><img src="images/DownAndDandy.png" alt="" /></a>
 								</div>
 								<header>
-									<h3>Dolor sit consequat magna</h3>
+									<h3>Down and Dandy</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>A tale of sartorial sabotage. Play as Archibald, the owner of a haberdashery in the downtown metro area 
+									as you uncover who has been sabotaging your small business. Built with JavaScript and Three.js.
+								</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="https://alvitovitch.github.io/Down-and-Dandy/" class="button">Cheerio</a></li>
 								</ul>
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://app-order-vitovitch.herokuapp.com/" class="image featured"><img src="images/OrderScreenShot.png" alt="" /></a>
 								</div>
 								<header>
-									<h3>Dolor sit consequat magna</h3>
+									<h3>Order</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>A fullstack clone of Discord, a community driven live-chat app. Order uses Rails on the backend, React/Redux on the front, and Redis for websocket management.</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="https://app-order-vitovitch.herokuapp.com/" class="button">Let's Chat</a></li>
 								</ul>
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="https://pictophone.herokuapp.com/" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								</div>
 								<header>
-									<h3>Dolor sit consequat magna</h3>
+									<h3>Pictophone</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>The lovechild of Pictonary and Telephone. Chat live with other players and draw on the community canvas while waiting for the round to start.
+									Pictophone is made using the MERN stack with Socket.io for websocket management. 
+								</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="https://pictophone.herokuapp.com/" class="button">Drop a line</a></li>
 								</ul>
 							</section>
-						</div>
 					</div>
 				</div>
 
 			<!-- Footer -->
-				<div id="footer-wrapper">
+				<!-- <div id="footer-wrapper">
 					<div id="footer" class="container">
 						<header class="major">
 							<h2>Euismod aliquam vehicula lorem</h2>
@@ -169,7 +143,7 @@
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 
 		</div>
 
