--- a/about.html
+++ b/about.html
@@ -11,11 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="left-sidebar is-preload">
+	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header-wrapper">
+				<div id="header-wrapper-about">
 					<div id="header" class="container">
 
 						<!-- Logo -->
@@ -25,7 +25,7 @@
 						<nav id="nav">
 							<ul>
 
-								<li><a href="no-sidebar.html">About</a></li>
+								<li><a href="about.html">About</a></li>
 								<li><a href="left-sidebar.html">Projects</a></li>
 								<li class="break">
 									<a>Links</a>
@@ -46,106 +46,65 @@
 			<!-- Main -->
 				<div class="wrapper">
 					<div class="container" id="main">
-						<div class="row gtr-150">
-							<div class="col-4 col-12-narrower">
 
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<header>
-												<h3>Elit sed feugiat</h3>
-											</header>
-											<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur et vel
-											sem sit amet dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et dolore
-											adipiscing elit. Curabitur vel sem sit.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">Magna amet nullam</a></li>
-											</ul>
-										</section>
-										<section>
-											<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-											<header>
-												<h3>Commodo lorem varius</h3>
-											</header>
-											<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur et vel
-											sem sit amet dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et dolore
-											adipiscing elit. Curabitur vel sem sit.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">Ipsum sed dolor</a></li>
-											</ul>
-										</section>
-									</section>
-
-							</div>
-							<div class="col-8 col-12-narrower imp-narrower">
-
-								<!-- Content -->
-									<article id="content">
-										<header>
-											<h2>Left Sidebar</h2>
-											<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit
-											dolor neque semper magna lorem ipsum.</p>
-										</header>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien
-										mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
-										condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
-										ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
-										eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
-										turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
-										Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
-										<p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum
-										gravida nibh eget, volutpat odio. Proin rhoncus, sapien
-										mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
-										condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
-										ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
-										eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
-										turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
-										Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
-										<p>Vestibulum pellentesque posuere lorem non aliquam. Mauris eleifend eleifend
-										felis aliquet ornare. Vestibulum porta velit at elementum elementum.</p>
-									</article>
-
-							</div>
-						</div>
-						<div class="row features">
+						<!-- Content -->
+							<article id="content">
+								<header>
+									<h2>About</h2>
+									<p>The man... The myth... The legend...</p>
+								</header>
+								<div id='pokeAbout'>
+									<img id='poke' src="images/189074681_493496372075279_3464237611437513443_n.jpg" alt=""/>
+									<p>Hi my name is Andrew and I am a software engineer. <br/> Before I became a software engineer I was an actor/model in the NY metro area.
+										 When the pandemic hit I decided to make the most of my time and I tried a Codecademy course. 
+										 I soon devoured their Python 2 course and continued on to Python 3. 
+										 By the time I finished ‘Automate the Boring Stuff’ I knew I had to take this to the next level.
+										   <br/> I applied and was accepted to App Academy, a thousand hour full stack bootcamp, where I honed
+										   my skills and became a software engineer. My time as an artistic creative has developed my mental flexibility as well as my ability to work in any group.
+											  I look forward to using those skills to help you achieve even greater heights!</p>
+								</div>
+							</article>
+							
+							<h2 id='whet'>Some things to whet your appetite</h2>
+							<div class="row features">
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://alvitovitch.github.io/Down-and-Dandy/" class="image featured"><img src="images/DownAndDandy.png" alt="" /></a>
 								</div>
 								<header>
-									<h3>Dolor sit consequat magna</h3>
+									<h3>Down and Dandy</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>A tale of sartorial sabotage. Play as Archibald, the owner of a haberdashery in the downtown metro area 
+									as you uncover who has been sabotaging your small business. Built with JavaScript and Three.js.
+								</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="https://alvitovitch.github.io/Down-and-Dandy/" class="button">Cheerio</a></li>
 								</ul>
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://app-order-vitovitch.herokuapp.com/" class="image featured"><img src="images/OrderScreenShot.png" alt="" /></a>
 								</div>
 								<header>
-									<h3>Dolor sit consequat magna</h3>
+									<h3>Order</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>A fullstack clone of Discord, a community driven live-chat app. Order uses Rails on the backend, React/Redux on the front, and Redis for websocket management.</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="https://app-order-vitovitch.herokuapp.com/" class="button">Let's Chat</a></li>
 								</ul>
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="https://pictophone.herokuapp.com/" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								</div>
 								<header>
-									<h3>Dolor sit consequat magna</h3>
+									<h3>Pictophone</h3>
 								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>The lovechild of Pictonary and Telephone. Chat live with other players and draw on the community canvas while waiting for the round to start.
+									Pictophone is made using the MERN stack with Socket.io for websocket management. 
+								</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
+									<li><a href="https://pictophone.herokuapp.com/" class="button">Drop a line</a></li>
 								</ul>
 							</section>
 						</div>
@@ -153,7 +112,7 @@
 				</div>
 
 			<!-- Footer -->
-				<div id="footer-wrapper">
+				<!-- <div id="footer-wrapper">
 					<div id="footer" class="container">
 						<header class="major">
 							<h2>Euismod aliquam vehicula lorem</h2>
@@ -203,7 +162,7 @@
 							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
-				</div>
+				</div> -->
 
 		</div>
 
