--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 							<nav id="nav">
 								<ul>
 
-									<li><a href="no-sidebar.html">About</a></li>
-									<li><a href="left-sidebar.html">Projects</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="projects.html">Projects</a></li>
 									<li class="break">
 										<a>Links</a>
 										<ul>
