--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 							<ul>
 
 								<li><a href="about.html">About</a></li>
-								<li><a href="left-sidebar.html">Projects</a></li>
+								<li><a href="projects.html">Projects</a></li>
 								<li class="break">
 									<a>Links</a>
 									<ul>
