--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -15,7 +15,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header-wrapper">
+				<div id="header-wrapper-about">
 					<div id="header" class="container">
 
 						<!-- Logo -->
@@ -25,8 +25,8 @@
 						<nav id="nav">
 							<ul>
 
-								<li><a href="no-sidebar.html">About</a></li>
-								<li><a href="left-sidebar.html">Projects</a></li>
+								<li><a href="about.html">About</a></li>
+								<li><a href="projects.html">Projects</a></li>
 								<li class="break">
 									<a>Links</a>
 									<ul>
