rough site done

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											<li><a href="https://www.instagram.com/brooklyn_dandy/?hl=en">Instagram</a></li>
 										</ul>
 									</li>
-									<li ><a href="right-sidebar.html">Contact</a></li>
+									<li ><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
 
