portfolio site contact

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</h2>
 							</header>
 							<ul class="actions">
-								<li><a href="#" class="button">Contact</a></li>
+								<li><a href="contact.html" class="button">Contact</a></li>
 							</ul>
 						</section>
 
