--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 									</div>
 									<ul class="actions">
-										<li><a href="#" class="button">Elevate my awareness</a></li>
+										<li><a href="assets/Vitovitch, Andrew - Resume  (1).pdf" target="_blank" class="button">Check out my resume</a></li>
 									</ul>
 								</div>
 							</section>
