--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
 							<div class="row features">
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper first">
-									<a href="https://alvitovitch.github.io/Down-and-Dandy/" class="image featured"><img src="images/DownAndDandy.png" alt="" /></a>
+									<a href="https://alvitovitch.github.io/Down-and-Dandy/" class="image featured"><img class='projectPic' src="images/DownAndDandy.png" alt="" /></a>
 								</div>
 								<header>
 									<h3>Down and Dandy</h3>
@@ -65,7 +65,7 @@
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="https://app-order-vitovitch.herokuapp.com/" class="image featured"><img src="images/OrderScreenShot.png" alt="" /></a>
+									<a href="https://app-order-vitovitch.herokuapp.com/" class="image featured"><img class='projectPic' src="images/OrderScreenShot.png" alt="" /></a>
 								</div>
 								<header>
 									<h3>Order</h3>
@@ -77,7 +77,7 @@
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="https://pictophone.herokuapp.com/" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="https://pictophone.herokuapp.com/" class="image featured"><img class='projectPic' src="images/pic05.jpg" alt="" /></a>
 								</div>
 								<header>
 									<h3>Pictophone</h3>
