--- a/about.html
+++ b/about.html
@@ -55,7 +55,8 @@
 								</header>
 								<div id='pokeAbout'>
 									<img id='poke' src="images/189074681_493496372075279_3464237611437513443_n.jpg" alt=""/>
-									<p>Hi my name is Andrew and I am a software engineer. <br/> Before I became a software engineer I was an actor/model in the NY metro area.
+									<p>Hi my name is Andrew and I am a software engineer. <br/> 
+										<br/>
 										 When the pandemic hit I decided to make the most of my time and I tried a Codecademy course. 
 										 I soon devoured their Python 2 course and continued on to Python 3. 
 										 By the time I finished ‘Automate the Boring Stuff’ I knew I had to take this to the next level.
