--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 								<header>
 									<h3>Order</h3>
 								</header>
-								<p>A fullstack clone of Discord, a community driven live-chat app. Order uses Rails on the backend, React/Redux on the front, and Redis for websocket management.</p>
+								<p>A fullstack clone of Discord, a community driven live-chat app. Make servers and talk with friends in real time! Order uses Rails on the backend, React/Redux on the front, and Redis for websocket management.</p>
 								<ul class="actions">
 									<li><a href="https://app-order-vitovitch.herokuapp.com/" class="button">Let's Chat</a></li>
 								</ul>
