--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 		<meta property="og:image" content="Screenshot 2022-01-28 154825.png" />
+		<link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+
 		<title>Andrew Vitovitch</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
