--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
 							<div class="row features">
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper first">
-									<a href="https://alvitovitch.github.io/Down-and-Dandy/" class="image featured"><img class='projectPic' src="images/Haberdashery.png" alt="" /></a>
+									<a href="https://alvitovitch.github.io/Down-and-Dandy/" class="image featured"><img class='projectPic' src="images/Haberdashery2.png" alt="" /></a>
 								</div>
 								<header>
 									<h3>Down and Dandy</h3>
@@ -66,7 +66,7 @@
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="https://app-order-vitovitch.herokuapp.com/" class="image featured"><img class='projectPic' src="images/OrderScreenShot.png" alt="" /></a>
+									<a href="https://app-order-vitovitch.herokuapp.com/" class="image featured"><img class='projectPic' src="images/OrderScreenShot2.png" alt="" /></a>
 								</div>
 								<header>
 									<h3>Order</h3>
@@ -78,7 +78,7 @@
 							</section>
 							<section class="col-4 col-12-narrower feature">
 								<div class="image-wrapper">
-									<a href="https://pictophone.herokuapp.com/" class="image featured"><img class='projectPic' src="images/pictophone.png" alt="" /></a>
+									<a href="https://pictophone.herokuapp.com/" class="image featured"><img class='projectPic' src="images/pictophone2.png" alt="" /></a>
 								</div>
 								<header>
 									<h3>Pictophone</h3>
