--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-		<link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+		<link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
 		<script type="text/javascript">			
 		(function() {
 		emailjs.init("user_hsXIUKlejWEeRCifwuorL");
