fixed trying a video url path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-		<meta property="og:image" content="Screenshot 2022-01-28 154825.png" />
+		<meta property='og:video' content="Copy of 80's pop v2.mkv" />
+		<!-- <meta property="og:image" content="Screenshot 2022-01-28 154825.png" /> -->
 		<link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
 
 		<title>Andrew Vitovitch</title>
