--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-		<meta property='og:video' content="./images/portfolio_vid.gif" />
+		<meta property='og:image' content="./images/portfolio_vid.gif" />
 		<!-- <meta property="og:image" content="Screenshot 2022-01-28 154825.png" /> -->
 		<link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
 
