--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 									</div>
 									<ul class="actions">
-										<li><a href="assets/Vitovitch, Andrew - Resume  (1).pdf" target="_blank" class="button">Check out my resume</a></li>
+										<li><a href="assets/Vitovitch_Andrew-Resume.pdf" target="_blank" class="button">Check out my resume</a></li>
 									</ul>
 								</div>
 							</section>
