pared down the ego

--- a/index.html
+++ b/index.html
@@ -86,12 +86,11 @@
 						<div class="row">
 							<section id='aboutFlex' class="col-6 col-12-narrower feature">
 								<div class="image-wrapper first">
-									<img id='coffee' src="images/coffee.png" alt="" />
+									<img id='smile' src="images/smile.jpg" alt="" />
 								</div>
 								<div>
 									<header>
-										<h2>Skilled?<br />
-										Incredibly</h2>
+										<h2>Skills</h2>
 									</header>
 									<div id='skills'>
 										<i class="devicon-ruby-plain colored"></i>
@@ -115,7 +114,7 @@
 
 									</div>
 									<ul class="actions">
-										<li><a href="assets/Vitovitch_Andrew-Resume.pdf" target="_blank" class="button">Check out my resume</a></li>
+										<li><a id="resume" href="assets/Vitovitch_Andrew-Resume.pdf" target="_blank" class="button">Check out my resume</a></li>
 									</ul>
 								</div>
 							</section>
